[package]
name = "loded"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.81"
serde = {version = "1.0.137", features = ["derive"]}
log = "0.4.17"
thiserror = "1.0.31"
tokio = {version = "1.19.2", features = ["rt-multi-thread", "io-util", "io-std", "macros", "sync", "signal"]}
zbus = {version = "2.3.2", default-features = false, features = ["tokio"] }
zvariant = "3.4.1"
rand = "0.8.5"
futures = "0.3.21"
env_logger = "0.9.0"
evdev = "0.11.4"
quinn = "0.8.3"
rcgen = "0.9.3"
rustls = "0.20.6"
rustls-pemfile = "1.0.0"